fixed login page dark mode

--- a/client/src/components/modules/Login.css
+++ b/client/src/components/modules/Login.css
@@ -10,6 +10,7 @@
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
   color: rgb(49, 58, 83);
+  background-color: #fff;
   /* display: flex; */
   z-index: -1;
 }
@@ -25,7 +26,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /* background-color: var(--primary); */
+  background-color: #fff;
   /* position: relative; */
   /* overflow: hidden; */
   font-family: "Montserrat", sans-serif;
